deploy/k8s/overlays/jax-cluster-prod-10--prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  geneweaver-api-ingress
  annotations:
    # NOTE: When deploying a new instance, make sure to use the staging issuer first
    # so that you don't hit the rate limit for the production issuer.
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "geneweaver-prod.jax.org"
        - "geneweaver.jax.org"
        - "geneweaver.org"
        - "www.geneweaver.org"
        - "classic.geneweaver.org"
      secretName: geneweaver-prod-jax-org-tls
  rules:
    - host: "geneweaver.org"
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: geneweaver-legacy
                port:
                  number: 8000
    - host: "geneweaver.jax.org"
      http:
        paths:
        - pathType: Prefix
          path: "/api"
          backend:
            service:
              name: geneweaver-api
              port:
                number: 8000
    - host: "geneweaver-prod.jax.org"
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: geneweaver-api
                port:
                  number: 8000
    - host: "www.geneweaver.org"
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: geneweaver-legacy
                port:
                  number: 8000
    - host: "classic.geneweaver.org"
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: geneweaver-legacy
                port:
                  number: 800
